# perceptron-half-moon

./: README.md  perceptron-half-moon.cabal
src/: Main.hs  Perceptron.hs
